--- a/iosApp/QRShield/es.lproj/Localizable.strings
+++ b/iosApp/QRShield/es.lproj/Localizable.strings
@@ -412,3 +412,41 @@
 "accessibility.toggle_scanning" = "Alternar escaneo";
 "accessibility.gallery" = "Galería";
 "accessibility.open_history" = "Abrir historial";
+
+// MARK: - Onboarding Pages
+"onboarding.scan.title" = "Escanea cualquier código QR";
+"onboarding.scan.description" = "Apunta tu cámara a cualquier código QR para analizar instantáneamente su contenido en busca de amenazas.";
+"onboarding.protect.title" = "Protección en tiempo real";
+"onboarding.protect.description" = "Nuestro motor IA analiza URLs usando más de 25 heurísticas de seguridad y algoritmos de aprendizaje automático.";
+"onboarding.privacy.title" = "Privacidad primero";
+"onboarding.privacy.description" = "Todo el análisis ocurre en el dispositivo usando Kotlin Multiplatform. Tus datos nunca salen de tu teléfono.";
+"onboarding.design.title" = "Hermoso diseño iOS 17+";
+"onboarding.design.description" = "Experimenta la impresionante interfaz Liquid Glass con animaciones fluidas y estética moderna.";
+"onboarding.skip" = "Omitir";
+"onboarding.continue" = "Continuar";
+"onboarding.get_started" = "Comenzar";
+"onboarding.page_counter" = "%d/%d";
+"onboarding.camera_title" = "Permiso de cámara";
+"onboarding.camera_allow" = "Permitir cámara";
+"onboarding.camera_later" = "Quizás después";
+"format.signals_detected" = "%d señales detectadas";
+"format.confidence_percent" = "%d%% Confianza";
+"format.level" = "NIVEL %d";
+"format.score_100" = "%d/100";
+"format.latency_ms" = "%dms";
+"format.confidence" = "%d%% Confianza";
+"format.score_total" = "Puntuación: %d/100";
+"format.score_slash_100" = "%d/100";
+"format.percent" = "%d%%";
+"format.status_date" = "%@ • %@";
+"dashboard.privacy_note" = " sin comprometer la privacidad de datos.";
+"dashboard.badge_plus" = "+2";
+"history.safe_format" = "Seguros: %d";
+"history.suspicious_format" = "Sospechosos: %d";
+"history.malicious_format" = "Maliciosos: %d";
+"history.total_format" = "Total: %d escaneos";
+"history.last_audit_format" = "Última auditoría: %@";
+"kmp.framework_linked" = "✅ KMP Framework vinculado";
+"kmp.using_mock" = "⚠️ Usando Mock (vincular common.framework)";
+"kmp.brand" = "🛡️ QR-SHIELD";
+"format.latency" = "%dms";
