--- a/iosApp/QRShield/fr.lproj/Localizable.strings
+++ b/iosApp/QRShield/fr.lproj/Localizable.strings
@@ -412,3 +412,41 @@
 "accessibility.toggle_scanning" = "Basculer le scan";
 "accessibility.gallery" = "Galerie";
 "accessibility.open_history" = "Ouvrir l'historique";
+
+// MARK: - Onboarding Pages
+"onboarding.scan.title" = "Scannez n'importe quel code QR";
+"onboarding.scan.description" = "Pointez votre caméra vers un code QR pour analyser instantanément son contenu à la recherche de menaces.";
+"onboarding.protect.title" = "Protection en temps réel";
+"onboarding.protect.description" = "Notre moteur IA analyse les URLs avec plus de 25 heuristiques de sécurité et algorithmes d'apprentissage automatique.";
+"onboarding.privacy.title" = "Confidentialité d'abord";
+"onboarding.privacy.description" = "Toutes les analyses sont effectuées sur l'appareil avec Kotlin Multiplatform. Vos données ne quittent jamais votre téléphone.";
+"onboarding.design.title" = "Magnifique design iOS 17+";
+"onboarding.design.description" = "Découvrez l'interface Liquid Glass époustouflante avec des animations fluides et une esthétique moderne.";
+"onboarding.skip" = "Ignorer";
+"onboarding.continue" = "Continuer";
+"onboarding.get_started" = "Commencer";
+"onboarding.page_counter" = "%d/%d";
+"onboarding.camera_title" = "Autorisation caméra";
+"onboarding.camera_allow" = "Autoriser la caméra";
+"onboarding.camera_later" = "Peut-être plus tard";
+"format.signals_detected" = "%d signaux détectés";
+"format.confidence_percent" = "%d%% Confiance";
+"format.level" = "NIVEAU %d";
+"format.score_100" = "%d/100";
+"format.latency_ms" = "%dms";
+"format.confidence" = "%d%% Confiance";
+"format.score_total" = "Score : %d/100";
+"format.score_slash_100" = "%d/100";
+"format.percent" = "%d%%";
+"format.status_date" = "%@ • %@";
+"dashboard.privacy_note" = " sans compromettre la confidentialité des données.";
+"dashboard.badge_plus" = "+2";
+"history.safe_format" = "Sûrs : %d";
+"history.suspicious_format" = "Suspects : %d";
+"history.malicious_format" = "Malveillants : %d";
+"history.total_format" = "Total : %d scans";
+"history.last_audit_format" = "Dernier audit : %@";
+"kmp.framework_linked" = "✅ KMP Framework lié";
+"kmp.using_mock" = "⚠️ Utilisation de Mock (lier common.framework)";
+"kmp.brand" = "🛡️ QR-SHIELD";
+"format.latency" = "%dms";
