--- a/iosApp/QRShield/hi.lproj/Localizable.strings
+++ b/iosApp/QRShield/hi.lproj/Localizable.strings
@@ -412,3 +412,41 @@
 "accessibility.toggle_scanning" = "स्कैन टॉगल करें";
 "accessibility.gallery" = "गैलरी";
 "accessibility.open_history" = "इतिहास खोलें";
+
+// MARK: - Onboarding Pages
+"onboarding.scan.title" = "कोई भी QR कोड स्कैन करें";
+"onboarding.scan.description" = "संभावित खतरों के लिए तुरंत विश्लेषण करने के लिए अपने कैमरे को किसी भी QR कोड पर पॉइंट करें।";
+"onboarding.protect.title" = "रियल-टाइम सुरक्षा";
+"onboarding.protect.description" = "हमारा AI इंजन 25+ सुरक्षा हेयुरिस्टिक्स और मशीन लर्निंग एल्गोरिदम का उपयोग करके URL का विश्लेषण करता है।";
+"onboarding.privacy.title" = "प्राइवेसी पहले";
+"onboarding.privacy.description" = "सभी विश्लेषण Kotlin Multiplatform का उपयोग करके डिवाइस पर होते हैं। आपका डेटा कभी आपके फोन से बाहर नहीं जाता।";
+"onboarding.design.title" = "खूबसूरत iOS 17+ डिज़ाइन";
+"onboarding.design.description" = "स्मूथ एनिमेशन और मॉडर्न एस्थेटिक्स के साथ शानदार Liquid Glass इंटरफ़ेस का अनुभव करें।";
+"onboarding.skip" = "छोड़ें";
+"onboarding.continue" = "जारी रखें";
+"onboarding.get_started" = "शुरू करें";
+"onboarding.page_counter" = "%d/%d";
+"onboarding.camera_title" = "कैमरा अनुमति";
+"onboarding.camera_allow" = "कैमरा अनुमति दें";
+"onboarding.camera_later" = "शायद बाद में";
+"format.signals_detected" = "%d सिग्नल पाए गए";
+"format.confidence_percent" = "%d%% विश्वास";
+"format.level" = "लेवल %d";
+"format.score_100" = "%d/100";
+"format.latency_ms" = "%dms";
+"format.confidence" = "%d%% विश्वास";
+"format.score_total" = "स्कोर: %d/100";
+"format.score_slash_100" = "%d/100";
+"format.percent" = "%d%%";
+"format.status_date" = "%@ • %@";
+"dashboard.privacy_note" = " डेटा प्राइवेसी से समझौता किए बिना।";
+"dashboard.badge_plus" = "+2";
+"history.safe_format" = "सुरक्षित: %d";
+"history.suspicious_format" = "संदिग्ध: %d";
+"history.malicious_format" = "हानिकारक: %d";
+"history.total_format" = "कुल: %d स्कैन";
+"history.last_audit_format" = "अंतिम ऑडिट: %@";
+"kmp.framework_linked" = "✅ KMP Framework लिंक्ड";
+"kmp.using_mock" = "⚠️ Mock उपयोग में (common.framework लिंक करें)";
+"kmp.brand" = "🛡️ QR-SHIELD";
+"format.latency" = "%dms";
