--- a/iosApp/QRShield/id.lproj/Localizable.strings
+++ b/iosApp/QRShield/id.lproj/Localizable.strings
@@ -411,3 +411,41 @@
 "accessibility.toggle_scanning" = "Alihkan pemindaian";
 "accessibility.gallery" = "Galeri";
 "accessibility.open_history" = "Buka riwayat";
+
+// MARK: - Onboarding Pages
+"onboarding.scan.title" = "Pindai kode QR apapun";
+"onboarding.scan.description" = "Arahkan kamera Anda ke kode QR untuk langsung menganalisis kontennya terhadap ancaman potensial.";
+"onboarding.protect.title" = "Perlindungan real-time";
+"onboarding.protect.description" = "Mesin AI kami menganalisis URL menggunakan 25+ heuristik keamanan dan algoritma machine learning.";
+"onboarding.privacy.title" = "Privasi utama";
+"onboarding.privacy.description" = "Semua analisis terjadi di perangkat menggunakan Kotlin Multiplatform. Data Anda tidak pernah meninggalkan ponsel.";
+"onboarding.design.title" = "Desain iOS 17+ yang indah";
+"onboarding.design.description" = "Rasakan antarmuka Liquid Glass yang memukau dengan animasi halus dan estetika modern.";
+"onboarding.skip" = "Lewati";
+"onboarding.continue" = "Lanjutkan";
+"onboarding.get_started" = "Mulai";
+"onboarding.page_counter" = "%d/%d";
+"onboarding.camera_title" = "Izin kamera";
+"onboarding.camera_allow" = "Izinkan kamera";
+"onboarding.camera_later" = "Nanti saja";
+"format.signals_detected" = "%d sinyal terdeteksi";
+"format.confidence_percent" = "%d%% Keyakinan";
+"format.level" = "LEVEL %d";
+"format.score_100" = "%d/100";
+"format.latency_ms" = "%dms";
+"format.confidence" = "%d%% Keyakinan";
+"format.score_total" = "Skor: %d/100";
+"format.score_slash_100" = "%d/100";
+"format.percent" = "%d%%";
+"format.status_date" = "%@ • %@";
+"dashboard.privacy_note" = " tanpa mengorbankan privasi data.";
+"dashboard.badge_plus" = "+2";
+"history.safe_format" = "Aman: %d";
+"history.suspicious_format" = "Mencurigakan: %d";
+"history.malicious_format" = "Berbahaya: %d";
+"history.total_format" = "Total: %d pemindaian";
+"history.last_audit_format" = "Audit terakhir: %@";
+"kmp.framework_linked" = "✅ KMP Framework terhubung";
+"kmp.using_mock" = "⚠️ Menggunakan Mock (hubungkan common.framework)";
+"kmp.brand" = "🛡️ QR-SHIELD";
+"format.latency" = "%dms";
