--- a/iosApp/QRShield/it.lproj/Localizable.strings
+++ b/iosApp/QRShield/it.lproj/Localizable.strings
@@ -412,3 +412,41 @@
 "accessibility.toggle_scanning" = "Attiva/disattiva scansione";
 "accessibility.gallery" = "Galleria";
 "accessibility.open_history" = "Apri cronologia";
+
+// MARK: - Onboarding Pages
+"onboarding.scan.title" = "Scansiona qualsiasi codice QR";
+"onboarding.scan.description" = "Punta la fotocamera verso un codice QR per analizzare istantaneamente il suo contenuto alla ricerca di minacce.";
+"onboarding.protect.title" = "Protezione in tempo reale";
+"onboarding.protect.description" = "Il nostro motore IA analizza gli URL usando oltre 25 euristiche di sicurezza e algoritmi di machine learning.";
+"onboarding.privacy.title" = "Privacy prima di tutto";
+"onboarding.privacy.description" = "Tutte le analisi avvengono sul dispositivo usando Kotlin Multiplatform. I tuoi dati non lasciano mai il telefono.";
+"onboarding.design.title" = "Bellissimo design iOS 17+";
+"onboarding.design.description" = "Sperimenta la straordinaria interfaccia Liquid Glass con animazioni fluide ed estetica moderna.";
+"onboarding.skip" = "Salta";
+"onboarding.continue" = "Continua";
+"onboarding.get_started" = "Inizia";
+"onboarding.page_counter" = "%d/%d";
+"onboarding.camera_title" = "Permesso fotocamera";
+"onboarding.camera_allow" = "Consenti fotocamera";
+"onboarding.camera_later" = "Forse dopo";
+"format.signals_detected" = "%d segnali rilevati";
+"format.confidence_percent" = "%d%% Confidenza";
+"format.level" = "LIVELLO %d";
+"format.score_100" = "%d/100";
+"format.latency_ms" = "%dms";
+"format.confidence" = "%d%% Confidenza";
+"format.score_total" = "Punteggio: %d/100";
+"format.score_slash_100" = "%d/100";
+"format.percent" = "%d%%";
+"format.status_date" = "%@ • %@";
+"dashboard.privacy_note" = " senza compromettere la privacy dei dati.";
+"dashboard.badge_plus" = "+2";
+"history.safe_format" = "Sicuri: %d";
+"history.suspicious_format" = "Sospetti: %d";
+"history.malicious_format" = "Malevoli: %d";
+"history.total_format" = "Totale: %d scansioni";
+"history.last_audit_format" = "Ultimo audit: %@";
+"kmp.framework_linked" = "✅ KMP Framework collegato";
+"kmp.using_mock" = "⚠️ Usando Mock (collegare common.framework)";
+"kmp.brand" = "🛡️ QR-SHIELD";
+"format.latency" = "%dms";
