--- a/iosApp/QRShield/ja.lproj/Localizable.strings
+++ b/iosApp/QRShield/ja.lproj/Localizable.strings
@@ -412,3 +412,41 @@
 "accessibility.toggle_scanning" = "スキャン切替";
 "accessibility.gallery" = "ギャラリー";
 "accessibility.open_history" = "履歴を開く";
+
+// MARK: - Onboarding Pages
+"onboarding.scan.title" = "あらゆるQRコードをスキャン";
+"onboarding.scan.description" = "カメラをQRコードに向けると、潜在的な脅威を即座に分析します。";
+"onboarding.protect.title" = "リアルタイム保護";
+"onboarding.protect.description" = "AIエンジンが25以上のセキュリティヒューリスティクスと機械学習でURLを分析します。";
+"onboarding.privacy.title" = "プライバシー最優先";
+"onboarding.privacy.description" = "すべての分析はKotlin Multiplatformを使用してデバイス上で行われます。データは外部に送信されません。";
+"onboarding.design.title" = "美しいiOS 17+デザイン";
+"onboarding.design.description" = "滑らかなアニメーションとモダンな美学を備えた魅力的なLiquid Glassインターフェースを体験。";
+"onboarding.skip" = "スキップ";
+"onboarding.continue" = "続ける";
+"onboarding.get_started" = "始める";
+"onboarding.page_counter" = "%d/%d";
+"onboarding.camera_title" = "カメラ許可";
+"onboarding.camera_allow" = "カメラを許可";
+"onboarding.camera_later" = "後で";
+"format.signals_detected" = "%d件のシグナル検出";
+"format.confidence_percent" = "%d%% 確信度";
+"format.level" = "レベル %d";
+"format.score_100" = "%d/100";
+"format.latency_ms" = "%dms";
+"format.confidence" = "%d%% 確信度";
+"format.score_total" = "スコア: %d/100";
+"format.score_slash_100" = "%d/100";
+"format.percent" = "%d%%";
+"format.status_date" = "%@ • %@";
+"dashboard.privacy_note" = " データプライバシーを損なうことなく。";
+"dashboard.badge_plus" = "+2";
+"history.safe_format" = "安全: %d";
+"history.suspicious_format" = "疑わしい: %d";
+"history.malicious_format" = "悪意: %d";
+"history.total_format" = "合計: %d スキャン";
+"history.last_audit_format" = "最終監査: %@";
+"kmp.framework_linked" = "✅ KMP Frameworkリンク済み";
+"kmp.using_mock" = "⚠️ Mock使用中 (common.frameworkをリンク)";
+"kmp.brand" = "🛡️ QR-SHIELD";
+"format.latency" = "%dms";
