--- a/iosApp/QRShield/ko.lproj/Localizable.strings
+++ b/iosApp/QRShield/ko.lproj/Localizable.strings
@@ -412,3 +412,41 @@
 "accessibility.toggle_scanning" = "스캔 전환";
 "accessibility.gallery" = "갤러리";
 "accessibility.open_history" = "기록 열기";
+
+// MARK: - Onboarding Pages
+"onboarding.scan.title" = "모든 QR 코드 스캔";
+"onboarding.scan.description" = "카메라를 QR 코드에 향하면 잠재적 위협을 즉시 분석합니다.";
+"onboarding.protect.title" = "실시간 보호";
+"onboarding.protect.description" = "AI 엔진이 25가지 이상의 보안 휴리스틱과 머신러닝으로 URL을 분석합니다.";
+"onboarding.privacy.title" = "개인정보 우선";
+"onboarding.privacy.description" = "모든 분석은 Kotlin Multiplatform을 사용해 기기에서 수행됩니다. 데이터가 외부로 전송되지 않습니다.";
+"onboarding.design.title" = "아름다운 iOS 17+ 디자인";
+"onboarding.design.description" = "부드러운 애니메이션과 현대적 미학의 멋진 Liquid Glass 인터페이스를 경험하세요.";
+"onboarding.skip" = "건너뛰기";
+"onboarding.continue" = "계속";
+"onboarding.get_started" = "시작하기";
+"onboarding.page_counter" = "%d/%d";
+"onboarding.camera_title" = "카메라 권한";
+"onboarding.camera_allow" = "카메라 허용";
+"onboarding.camera_later" = "나중에";
+"format.signals_detected" = "%d개 신호 감지";
+"format.confidence_percent" = "%d%% 신뢰도";
+"format.level" = "레벨 %d";
+"format.score_100" = "%d/100";
+"format.latency_ms" = "%dms";
+"format.confidence" = "%d%% 신뢰도";
+"format.score_total" = "점수: %d/100";
+"format.score_slash_100" = "%d/100";
+"format.percent" = "%d%%";
+"format.status_date" = "%@ • %@";
+"dashboard.privacy_note" = " 데이터 프라이버시를 손상시키지 않고.";
+"dashboard.badge_plus" = "+2";
+"history.safe_format" = "안전: %d";
+"history.suspicious_format" = "의심: %d";
+"history.malicious_format" = "악성: %d";
+"history.total_format" = "총: %d 스캔";
+"history.last_audit_format" = "마지막 감사: %@";
+"kmp.framework_linked" = "✅ KMP Framework 연결됨";
+"kmp.using_mock" = "⚠️ Mock 사용 중 (common.framework 연결)";
+"kmp.brand" = "🛡️ QR-SHIELD";
+"format.latency" = "%dms";
