--- a/iosApp/QRShield/pt.lproj/Localizable.strings
+++ b/iosApp/QRShield/pt.lproj/Localizable.strings
@@ -412,3 +412,41 @@
 "accessibility.toggle_scanning" = "Alternar varredura";
 "accessibility.gallery" = "Galeria";
 "accessibility.open_history" = "Abrir histórico";
+
+// MARK: - Onboarding Pages
+"onboarding.scan.title" = "Escaneie qualquer QR Code";
+"onboarding.scan.description" = "Aponte sua câmera para um QR Code para analisar instantaneamente seu conteúdo em busca de ameaças.";
+"onboarding.protect.title" = "Proteção em tempo real";
+"onboarding.protect.description" = "Nosso motor IA analisa URLs usando mais de 25 heurísticas de segurança e algoritmos de machine learning.";
+"onboarding.privacy.title" = "Privacidade em primeiro lugar";
+"onboarding.privacy.description" = "Toda análise acontece no dispositivo usando Kotlin Multiplatform. Seus dados nunca saem do seu celular.";
+"onboarding.design.title" = "Lindo design iOS 17+";
+"onboarding.design.description" = "Experimente a impressionante interface Liquid Glass com animações suaves e estética moderna.";
+"onboarding.skip" = "Pular";
+"onboarding.continue" = "Continuar";
+"onboarding.get_started" = "Começar";
+"onboarding.page_counter" = "%d/%d";
+"onboarding.camera_title" = "Permissão de câmera";
+"onboarding.camera_allow" = "Permitir câmera";
+"onboarding.camera_later" = "Talvez depois";
+"format.signals_detected" = "%d sinais detectados";
+"format.confidence_percent" = "%d%% Confiança";
+"format.level" = "NÍVEL %d";
+"format.score_100" = "%d/100";
+"format.latency_ms" = "%dms";
+"format.confidence" = "%d%% Confiança";
+"format.score_total" = "Pontuação: %d/100";
+"format.score_slash_100" = "%d/100";
+"format.percent" = "%d%%";
+"format.status_date" = "%@ • %@";
+"dashboard.privacy_note" = " sem comprometer a privacidade dos dados.";
+"dashboard.badge_plus" = "+2";
+"history.safe_format" = "Seguros: %d";
+"history.suspicious_format" = "Suspeitos: %d";
+"history.malicious_format" = "Maliciosos: %d";
+"history.total_format" = "Total: %d varreduras";
+"history.last_audit_format" = "Última auditoria: %@";
+"kmp.framework_linked" = "✅ KMP Framework vinculado";
+"kmp.using_mock" = "⚠️ Usando Mock (vincular common.framework)";
+"kmp.brand" = "🛡️ QR-SHIELD";
+"format.latency" = "%dms";
