--- a/iosApp/QRShield/ru.lproj/Localizable.strings
+++ b/iosApp/QRShield/ru.lproj/Localizable.strings
@@ -412,3 +412,41 @@
 "accessibility.toggle_scanning" = "Переключить сканирование";
 "accessibility.gallery" = "Галерея";
 "accessibility.open_history" = "Открыть историю";
+
+// MARK: - Onboarding Pages
+"onboarding.scan.title" = "Сканируйте любой QR-код";
+"onboarding.scan.description" = "Наведите камеру на QR-код для мгновенного анализа содержимого на наличие угроз.";
+"onboarding.protect.title" = "Защита в реальном времени";
+"onboarding.protect.description" = "Наш ИИ-движок анализирует URL с помощью 25+ эвристик безопасности и алгоритмов машинного обучения.";
+"onboarding.privacy.title" = "Конфиденциальность прежде всего";
+"onboarding.privacy.description" = "Весь анализ происходит на устройстве с использованием Kotlin Multiplatform. Ваши данные никогда не покидают телефон.";
+"onboarding.design.title" = "Красивый дизайн iOS 17+";
+"onboarding.design.description" = "Испытайте потрясающий интерфейс Liquid Glass с плавными анимациями и современной эстетикой.";
+"onboarding.skip" = "Пропустить";
+"onboarding.continue" = "Продолжить";
+"onboarding.get_started" = "Начать";
+"onboarding.page_counter" = "%d/%d";
+"onboarding.camera_title" = "Разрешение камеры";
+"onboarding.camera_allow" = "Разрешить камеру";
+"onboarding.camera_later" = "Может позже";
+"format.signals_detected" = "Обнаружено %d сигналов";
+"format.confidence_percent" = "%d%% уверенности";
+"format.level" = "УРОВЕНЬ %d";
+"format.score_100" = "%d/100";
+"format.latency_ms" = "%dms";
+"format.confidence" = "%d%% уверенности";
+"format.score_total" = "Оценка: %d/100";
+"format.score_slash_100" = "%d/100";
+"format.percent" = "%d%%";
+"format.status_date" = "%@ • %@";
+"dashboard.privacy_note" = " без ущерба для конфиденциальности данных.";
+"dashboard.badge_plus" = "+2";
+"history.safe_format" = "Безопасных: %d";
+"history.suspicious_format" = "Подозрительных: %d";
+"history.malicious_format" = "Вредоносных: %d";
+"history.total_format" = "Всего: %d сканирований";
+"history.last_audit_format" = "Последняя проверка: %@";
+"kmp.framework_linked" = "✅ KMP Framework связан";
+"kmp.using_mock" = "⚠️ Используется Mock (связать common.framework)";
+"kmp.brand" = "🛡️ QR-SHIELD";
+"format.latency" = "%dms";
