--- a/iosApp/QRShield/th.lproj/Localizable.strings
+++ b/iosApp/QRShield/th.lproj/Localizable.strings
@@ -411,3 +411,41 @@
 "accessibility.toggle_scanning" = "สลับการสแกน";
 "accessibility.gallery" = "แกลเลอรี";
 "accessibility.open_history" = "เปิดประวัติ";
+
+// MARK: - Onboarding Pages
+"onboarding.scan.title" = "สแกน QR โค้ดใดก็ได้";
+"onboarding.scan.description" = "ชี้กล้องไปที่ QR โค้ดเพื่อวิเคราะห์เนื้อหาทันทีสำหรับภัยคุกคามที่อาจเกิดขึ้น";
+"onboarding.protect.title" = "การป้องกันแบบเรียลไทม์";
+"onboarding.protect.description" = "เอ็นจิ้น AI ของเราวิเคราะห์ URL โดยใช้ฮิวริสติกด้านความปลอดภัยกว่า 25 รายการและอัลกอริทึมการเรียนรู้ของเครื่อง";
+"onboarding.privacy.title" = "ความเป็นส่วนตัวมาก่อน";
+"onboarding.privacy.description" = "การวิเคราะห์ทั้งหมดเกิดขึ้นบนอุปกรณ์โดยใช้ Kotlin Multiplatform ข้อมูลของคุณไม่เคยออกจากโทรศัพท์";
+"onboarding.design.title" = "ดีไซน์ iOS 17+ สวยงาม";
+"onboarding.design.description" = "สัมผัสอินเทอร์เฟซ Liquid Glass ที่น่าทึ่งพร้อมแอนิเมชันที่ลื่นไหลและสุนทรียศาสตร์ทันสมัย";
+"onboarding.skip" = "ข้าม";
+"onboarding.continue" = "ดำเนินการต่อ";
+"onboarding.get_started" = "เริ่มต้น";
+"onboarding.page_counter" = "%d/%d";
+"onboarding.camera_title" = "สิทธิ์กล้อง";
+"onboarding.camera_allow" = "อนุญาตกล้อง";
+"onboarding.camera_later" = "บางทีภายหลัง";
+"format.signals_detected" = "ตรวจพบ %d สัญญาณ";
+"format.confidence_percent" = "%d%% ความมั่นใจ";
+"format.level" = "ระดับ %d";
+"format.score_100" = "%d/100";
+"format.latency_ms" = "%dms";
+"format.confidence" = "%d%% ความมั่นใจ";
+"format.score_total" = "คะแนน: %d/100";
+"format.score_slash_100" = "%d/100";
+"format.percent" = "%d%%";
+"format.status_date" = "%@ • %@";
+"dashboard.privacy_note" = " โดยไม่กระทบความเป็นส่วนตัวของข้อมูล";
+"dashboard.badge_plus" = "+2";
+"history.safe_format" = "ปลอดภัย: %d";
+"history.suspicious_format" = "น่าสงสัย: %d";
+"history.malicious_format" = "เป็นอันตราย: %d";
+"history.total_format" = "ทั้งหมด: %d การสแกน";
+"history.last_audit_format" = "ตรวจสอบล่าสุด: %@";
+"kmp.framework_linked" = "✅ KMP Framework เชื่อมต่อแล้ว";
+"kmp.using_mock" = "⚠️ ใช้ Mock (เชื่อมต่อ common.framework)";
+"kmp.brand" = "🛡️ QR-SHIELD";
+"format.latency" = "%dms";
