--- a/iosApp/QRShield/tr.lproj/Localizable.strings
+++ b/iosApp/QRShield/tr.lproj/Localizable.strings
@@ -411,3 +411,41 @@
 "accessibility.toggle_scanning" = "Taramayı değiştir";
 "accessibility.gallery" = "Galeri";
 "accessibility.open_history" = "Geçmişi aç";
+
+// MARK: - Onboarding Pages
+"onboarding.scan.title" = "Herhangi bir QR Kodu tarayın";
+"onboarding.scan.description" = "Potansiyel tehditlere karşı içeriğini anında analiz etmek için kameranızı herhangi bir QR koduna yöneltin.";
+"onboarding.protect.title" = "Gerçek zamanlı koruma";
+"onboarding.protect.description" = "AI motorumuz 25+ güvenlik sezgisel ve makine öğrenimi algoritmaları kullanarak URL'leri analiz eder.";
+"onboarding.privacy.title" = "Gizlilik önce gelir";
+"onboarding.privacy.description" = "Tüm analizler Kotlin Multiplatform kullanılarak cihazda gerçekleşir. Verileriniz asla telefonunuzdan ayrılmaz.";
+"onboarding.design.title" = "Güzel iOS 17+ tasarımı";
+"onboarding.design.description" = "Akıcı animasyonlar ve modern estetikle çarpıcı Liquid Glass arayüzünü deneyimleyin.";
+"onboarding.skip" = "Atla";
+"onboarding.continue" = "Devam";
+"onboarding.get_started" = "Başla";
+"onboarding.page_counter" = "%d/%d";
+"onboarding.camera_title" = "Kamera izni";
+"onboarding.camera_allow" = "Kameraya izin ver";
+"onboarding.camera_later" = "Belki sonra";
+"format.signals_detected" = "%d sinyal tespit edildi";
+"format.confidence_percent" = "%d%% Güven";
+"format.level" = "SEVİYE %d";
+"format.score_100" = "%d/100";
+"format.latency_ms" = "%dms";
+"format.confidence" = "%d%% Güven";
+"format.score_total" = "Puan: %d/100";
+"format.score_slash_100" = "%d/100";
+"format.percent" = "%d%%";
+"format.status_date" = "%@ • %@";
+"dashboard.privacy_note" = " veri gizliliğinden ödün vermeden.";
+"dashboard.badge_plus" = "+2";
+"history.safe_format" = "Güvenli: %d";
+"history.suspicious_format" = "Şüpheli: %d";
+"history.malicious_format" = "Zararlı: %d";
+"history.total_format" = "Toplam: %d tarama";
+"history.last_audit_format" = "Son denetim: %@";
+"kmp.framework_linked" = "✅ KMP Framework bağlı";
+"kmp.using_mock" = "⚠️ Mock kullanılıyor (common.framework bağlayın)";
+"kmp.brand" = "🛡️ QR-SHIELD";
+"format.latency" = "%dms";
