--- a/iosApp/QRShield/vi.lproj/Localizable.strings
+++ b/iosApp/QRShield/vi.lproj/Localizable.strings
@@ -411,3 +411,41 @@
 "accessibility.toggle_scanning" = "Chuyển đổi quét";
 "accessibility.gallery" = "Thư viện";
 "accessibility.open_history" = "Mở lịch sử";
+
+// MARK: - Onboarding Pages
+"onboarding.scan.title" = "Quét mọi mã QR";
+"onboarding.scan.description" = "Hướng camera vào mã QR để phân tích ngay lập tức nội dung của nó tìm các mối đe dọa tiềm ẩn.";
+"onboarding.protect.title" = "Bảo vệ thời gian thực";
+"onboarding.protect.description" = "Engine AI của chúng tôi phân tích URL sử dụng hơn 25 heuristics bảo mật và thuật toán machine learning.";
+"onboarding.privacy.title" = "Quyền riêng tư trước tiên";
+"onboarding.privacy.description" = "Tất cả phân tích diễn ra trên thiết bị sử dụng Kotlin Multiplatform. Dữ liệu của bạn không bao giờ rời khỏi điện thoại.";
+"onboarding.design.title" = "Thiết kế iOS 17+ đẹp";
+"onboarding.design.description" = "Trải nghiệm giao diện Liquid Glass tuyệt đẹp với hoạt ảnh mượt mà và thẩm mỹ hiện đại.";
+"onboarding.skip" = "Bỏ qua";
+"onboarding.continue" = "Tiếp tục";
+"onboarding.get_started" = "Bắt đầu";
+"onboarding.page_counter" = "%d/%d";
+"onboarding.camera_title" = "Quyền camera";
+"onboarding.camera_allow" = "Cho phép camera";
+"onboarding.camera_later" = "Có lẽ sau";
+"format.signals_detected" = "Phát hiện %d tín hiệu";
+"format.confidence_percent" = "%d%% Độ tin cậy";
+"format.level" = "CẤP ĐỘ %d";
+"format.score_100" = "%d/100";
+"format.latency_ms" = "%dms";
+"format.confidence" = "%d%% Độ tin cậy";
+"format.score_total" = "Điểm: %d/100";
+"format.score_slash_100" = "%d/100";
+"format.percent" = "%d%%";
+"format.status_date" = "%@ • %@";
+"dashboard.privacy_note" = " mà không ảnh hưởng đến quyền riêng tư dữ liệu.";
+"dashboard.badge_plus" = "+2";
+"history.safe_format" = "An toàn: %d";
+"history.suspicious_format" = "Đáng ngờ: %d";
+"history.malicious_format" = "Độc hại: %d";
+"history.total_format" = "Tổng: %d lần quét";
+"history.last_audit_format" = "Kiểm tra cuối: %@";
+"kmp.framework_linked" = "✅ KMP Framework đã liên kết";
+"kmp.using_mock" = "⚠️ Đang dùng Mock (liên kết common.framework)";
+"kmp.brand" = "🛡️ QR-SHIELD";
+"format.latency" = "%dms";
