--- a/iosApp/QRShield/zh-Hans.lproj/Localizable.strings
+++ b/iosApp/QRShield/zh-Hans.lproj/Localizable.strings
@@ -412,3 +412,41 @@
 "accessibility.toggle_scanning" = "切换扫描";
 "accessibility.gallery" = "相册";
 "accessibility.open_history" = "打开历史";
+
+// MARK: - Onboarding Pages
+"onboarding.scan.title" = "扫描任意二维码";
+"onboarding.scan.description" = "将相机对准任何二维码以即时分析其内容是否存在潜在威胁。";
+"onboarding.protect.title" = "实时保护";
+"onboarding.protect.description" = "我们的AI引擎使用25+安全启发式和机器学习算法分析URL。";
+"onboarding.privacy.title" = "隐私优先";
+"onboarding.privacy.description" = "所有分析都使用Kotlin Multiplatform在设备上进行。您的数据永远不会离开手机。";
+"onboarding.design.title" = "精美的iOS 17+设计";
+"onboarding.design.description" = "体验令人惊叹的Liquid Glass界面，流畅的动画和现代美学。";
+"onboarding.skip" = "跳过";
+"onboarding.continue" = "继续";
+"onboarding.get_started" = "开始";
+"onboarding.page_counter" = "%d/%d";
+"onboarding.camera_title" = "相机权限";
+"onboarding.camera_allow" = "允许相机";
+"onboarding.camera_later" = "稍后再说";
+"format.signals_detected" = "检测到 %d 个信号";
+"format.confidence_percent" = "%d%% 置信度";
+"format.level" = "等级 %d";
+"format.score_100" = "%d/100";
+"format.latency_ms" = "%dms";
+"format.confidence" = "%d%% 置信度";
+"format.score_total" = "分数: %d/100";
+"format.score_slash_100" = "%d/100";
+"format.percent" = "%d%%";
+"format.status_date" = "%@ • %@";
+"dashboard.privacy_note" = " 不会损害数据隐私。";
+"dashboard.badge_plus" = "+2";
+"history.safe_format" = "安全: %d";
+"history.suspicious_format" = "可疑: %d";
+"history.malicious_format" = "恶意: %d";
+"history.total_format" = "总计: %d 次扫描";
+"history.last_audit_format" = "上次审计: %@";
+"kmp.framework_linked" = "✅ KMP框架已链接";
+"kmp.using_mock" = "⚠️ 使用Mock（链接common.framework）";
+"kmp.brand" = "🛡️ QR-SHIELD";
+"format.latency" = "%dms";
